--- a/Responsive Web Design/Personal Portfolio Page/index.html
+++ b/Responsive Web Design/Personal Portfolio Page/index.html
@@ -62,31 +62,23 @@
         </div>
     </section>
     <section id="projects">
-        <h2>These are some of my projects</h2>
-        <div>
-            <a href="http://" target="_blank" class="project-tile">
-                <img src="" alt="" class="project-image">
-                <p class="project-title"></p>
+        <h1>These are some of my projects</h1>
+        <div class="projects-wrapper">
+            <a href="https://codepen.io/mgdtk/pen/LEEppar" target="_blank" class="project-tile">
+                <img src="./img/survey-form.jpg" alt="Screenshot of a survey form themed around Selena Gomez, featuring fan-related questions" class="project-image">
+                <h4 class="project-title">Survey Form</h4>
             </a>
-            <a href="http://" target="_blank" class="project-tile">
-                <img src="" alt="" class="project-image">
-                <p class="project-title"></p>
+            <a href="https://codepen.io/mgdtk/pen/PwwPPLr" target="_blank" class="project-tile">
+                <img src="./img/tribute-page.jpg" alt="Screenshot of a tribute webpage dedicated to Wanda Maximoff, showcasing character biography and image" class="project-image">
+                <h4 class="project-title">Tribute Page</h4>
             </a>
-            <a href="http://" target="_blank" class="project-tile">
-                <img src="" alt="" class="project-image">
-                <p class="project-title"></p>
+            <a href="https://codepen.io/mgdtk/pen/MYYaaRp" target="_blank" class="project-tile">
+                <img src="./img/technical-documentation-page.jpg" alt="Screenshot of a technical documentation page for Python, highlighting code examples and syntax explanations" class="project-image">
+                <h4 class="project-title">Technical Documentation Page</h4>
             </a>
-            <a href="http://" target="_blank" class="project-tile">
-                <img src="" alt="" class="project-image">
-                <p class="project-title"></p>
-            </a>
-            <a href="http://" target="_blank" class="project-tile">
-                <img src="" alt="" class="project-image">
-                <p class="project-title"></p>
-            </a>
-            <a href="http://" target="_blank" class="project-tile">
-                <img src="" alt="" class="project-image">
-                <p class="project-title"></p>
+            <a href="https://codepen.io/mgdtk/pen/azzvvxq" target="_blank" class="project-tile">
+                <img src="./img/product-landing-page.jpg" alt="Screenshot of a landing page for an online bookshop, displaying featured books and a navigation menu" class="project-image">
+                <h4 class="project-title">Product Landing Page</h4>
             </a>
         </div>
     </section>
