--- a/Responsive Web Design/Personal Portfolio Page/index.html
+++ b/Responsive Web Design/Personal Portfolio Page/index.html
@@ -53,33 +53,35 @@
         </header>
     </section>
     <section id="about">
-        <h1>About Me</h1>
-        <div class="description">
-            <p>Hello! I am <span class="about-span">Marlon Destro</span> from <span class="about-span">São Paulo, Brasil.</span></p>
-            <p>I&rsquo;m a <span class="about-span">Computer Science</span> student at <span class="about-span">Universidade Federal do ABC</span>, currently exploring different areas in tech, with a particular interest in Data Science.</p>
-            <p>Lately, I&rsquo;ve been diving into tools like Python, Pandas, SQL, and Excel to build up my skills and get hands-on with real data.</p>
-            <p>In my free time, I enjoy learning about new technologies, working on personal projects, and unwinding with a good movie or TV show.</p>
-        </div>
-    </section>
-    <section id="projects">
-        <h1>These are some of my projects</h1>
-        <div class="projects-wrapper">
-            <a href="https://codepen.io/mgdtk/pen/LEEppar" target="_blank" class="project-tile">
-                <img src="./img/survey-form.jpg" alt="Screenshot of a survey form themed around Selena Gomez, featuring fan-related questions" class="project-image">
-                <h4 class="project-title">Survey Form</h4>
-            </a>
-            <a href="https://codepen.io/mgdtk/pen/PwwPPLr" target="_blank" class="project-tile">
-                <img src="./img/tribute-page.jpg" alt="Screenshot of a tribute webpage dedicated to Wanda Maximoff, showcasing character biography and image" class="project-image">
-                <h4 class="project-title">Tribute Page</h4>
-            </a>
-            <a href="https://codepen.io/mgdtk/pen/MYYaaRp" target="_blank" class="project-tile">
-                <img src="./img/technical-documentation-page.jpg" alt="Screenshot of a technical documentation page for Python, highlighting code examples and syntax explanations" class="project-image">
-                <h4 class="project-title">Technical Documentation Page</h4>
-            </a>
-            <a href="https://codepen.io/mgdtk/pen/azzvvxq" target="_blank" class="project-tile">
-                <img src="./img/product-landing-page.jpg" alt="Screenshot of a landing page for an online bookshop, displaying featured books and a navigation menu" class="project-image">
-                <h4 class="project-title">Product Landing Page</h4>
-            </a>
+        <div>
+            <h1>About Me</h1>
+            <div class="description">
+                <p>Hello! I am <span class="about-span">Marlon Destro</span> from <span class="about-span">São Paulo, Brasil.</span></p>
+                <p>I&rsquo;m a <span class="about-span">Computer Science</span> student at <span class="about-span">Universidade Federal do ABC</span>, currently exploring different areas in tech, with a particular interest in Data Science.</p>
+                <p>Lately, I&rsquo;ve been diving into tools like Python, Pandas, SQL, and Excel to build up my skills and get hands-on with real data.</p>
+                <p>In my free time, I enjoy learning about new technologies, working on personal projects, and unwinding with a good movie or TV show.</p>
+            </div>
+        </section>
+        <section id="projects">
+            <h1>These are some of my projects</h1>
+            <div class="projects-wrapper">
+                <a href="https://codepen.io/mgdtk/pen/LEEppar" target="_blank" class="project-tile">
+                    <img src="./img/survey-form.jpg" alt="Screenshot of a survey form themed around Selena Gomez, featuring fan-related questions" class="project-image">
+                    <h4 class="project-title">Survey Form</h4>
+                </a>
+                <a href="https://codepen.io/mgdtk/pen/PwwPPLr" target="_blank" class="project-tile">
+                    <img src="./img/tribute-page.jpg" alt="Screenshot of a tribute webpage dedicated to Wanda Maximoff, showcasing character biography and image" class="project-image">
+                    <h4 class="project-title">Tribute Page</h4>
+                </a>
+                <a href="https://codepen.io/mgdtk/pen/MYYaaRp" target="_blank" class="project-tile">
+                    <img src="./img/technical-documentation-page.jpg" alt="Screenshot of a technical documentation page for Python, highlighting code examples and syntax explanations" class="project-image">
+                    <h4 class="project-title">Technical Documentation Page</h4>
+                </a>
+                <a href="https://codepen.io/mgdtk/pen/azzvvxq" target="_blank" class="project-tile">
+                    <img src="./img/product-landing-page.jpg" alt="Screenshot of a landing page for an online bookshop, displaying featured books and a navigation menu" class="project-image">
+                    <h4 class="project-title">Product Landing Page</h4>
+                </a>
+            </div>
         </div>
     </section>
     <section id="contact">
@@ -87,7 +89,7 @@
             <h1>Let&rsquo;s connect!</h1>
             <h2>Feel free to reach out through any of the links below.</h2>
             <div class="icons-container">
-                <a href="https://github.com/mgdtk" target="_blank">
+                <a href="https://github.com/mgdtk" target="_blank" id="profile-link">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-github icon" viewBox="0 0 16 16">
                         <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
                     </svg>
